# pyapp.elasticsearch

./: .gitignore  README.rst  noxfile.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: pre-release.yml  python-app.yml  release.yml  test-cases.yml
pyapp_ext/elasticsearch/: __init__.py  _factory.py  checks.py  default_settings.py  factory.py
tests/: conftest.py  test_checks.py  test_factory.py
