[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyapp-elasticsearch"
version = "0.1.0-beta.5"
description = "pyApp extension for Elasticsearch"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
packages = [
    { include = "pyapp_ext" },
    { include = "tests", format = "sdist" },
]
readme = "README.rst"
repository = "https://github.com/pyapp-org/pyapp.elasticsearch"
keywords = ["elasticasearch", "asyncio", "pyapp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.6"
pyapp = ">=4.3.0"
elasticsearch = "^7.8.0"

# Async support
aiohttp = { version = "^3.6.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"

[tool.poetry.extras]
async = ["aiohttp"]

[tool.poetry.plugins."pyapp.extensions"]
"pyapp-elasticsearch" = "pyapp_ext.elasticsearch:Extension"
